// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stub mode > bundle stub > should create .d.mts stub for types 1`] = `
"## index.d.mts

\`\`\`ts
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-create-d-mts-stub-for-types/index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-create-d-mts-stub-for-types/index.ts";
\`\`\`
"
`;

exports[`stub mode > bundle stub > should create stub file that re-exports source 1`] = `
"## index.d.mts

\`\`\`ts
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-create-stub-file-that-re-exports-source/index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-create-stub-file-that-re-exports-source/index.ts";
\`\`\`
"
`;

exports[`stub mode > bundle stub > should handle default export in stub 1`] = `
"## index.d.mts

\`\`\`ts
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-handle-default-export-in-stub/index.ts";
export { default } from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-handle-default-export-in-stub/index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-handle-default-export-in-stub/index.ts";
export { default } from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-handle-default-export-in-stub/index.ts";
\`\`\`
"
`;

exports[`stub mode > bundle stub > should make stub executable when source has shebang 1`] = `
"## cli.d.mts

\`\`\`ts
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-make-stub-executable-when-source-has-shebang/cli.ts";
\`\`\`

## cli.mjs

\`\`\`js
#!/usr/bin/env node
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-make-stub-executable-when-source-has-shebang/cli.ts";
\`\`\`
"
`;

exports[`stub mode > bundle stub > should preserve shebang in stub file 1`] = `
"## cli.d.mts

\`\`\`ts
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-preserve-shebang-in-stub-file/cli.ts";
\`\`\`

## cli.mjs

\`\`\`js
#!/usr/bin/env node
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/bundle-stub/should-preserve-shebang-in-stub-file/cli.ts";
\`\`\`
"
`;

exports[`stub mode > stub uses absolute paths > should use absolute path in re-export 1`] = `
"## index.d.mts

\`\`\`ts
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/stub-uses-absolute-paths/should-use-absolute-path-in-re-export/index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/stub-uses-absolute-paths/should-use-absolute-path-in-re-export/index.ts";
\`\`\`
"
`;

exports[`stub mode > stub with multiple entries > should create stubs for multiple entries 1`] = `
"## index.d.mts

\`\`\`ts
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/stub-with-multiple-entries/should-create-stubs-for-multiple-entries/index.ts";
\`\`\`

## index.mjs

\`\`\`js
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/stub-with-multiple-entries/should-create-stubs-for-multiple-entries/index.ts";
\`\`\`

## utils.d.mts

\`\`\`ts
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/stub-with-multiple-entries/should-create-stubs-for-multiple-entries/utils.ts";
\`\`\`

## utils.mjs

\`\`\`js
export * from "/Users/olive/Desktop/code/Sunny-117/robuild/test/temp/stub-with-multiple-entries/should-create-stubs-for-multiple-entries/utils.ts";
\`\`\`
"
`;
